packages/svelte/tests/validator/samples/window-binding-invalid-dimensions/input.svelte
<script>
    let foo;
</script>

<svelte:window bind:clientWidth={foo} />
