packages/svelte/tests/compiler-errors/samples/void-special-closing/main.svelte
<svelte:options immutable={true}></svelte:options>
